tests/fixtures/invalid/str_mul_list.py
# Cannot multiply Str and List[int]
x: str = "hello" * [1, 2, 3]
